<resources>
    <string name="app_name">Funds Flow</string>
    <string name="placeholder">Placeholder</string>

    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_outline">Outline</string>
    <string name="action_trading">Trading Management</string>
    <string name="action_account">Account Management</string>
    <string name="action_tag">Tag Management</string>
    <string name="action_budget">Budget</string>
    <string name="action_statistic">Statistic</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_trading">Trading List</string>
    <string name="title_activity_trading_editor">Edit Trading</string>
    <string name="trading_type_income">Income</string>
    <string name="trading_type_expense">Expense</string>
    <string name="trading_type_transfer">Transfer</string>

    <string name="label_account_name">Account Name</string>
    <string name="label_save">Save</string>
    <string name="label_delete">Delete</string>
    <string name="label_cancel">Cancel</string>
    <string name="label_amount">Amount</string>
    <string name="label_amount_zero">0.00</string>
    <string name="label_date">Date</string>
    <string name="label_time">Time</string>
    <string name="label_date_time">Date Time</string>

    <string name="title_activity_account">Account List</string>
    <string name="title_activity_account_add">Add Account</string>
    <string name="message_account_name_empty">The account name can\'t be empty</string>
    <string name="message_account_name_used">Tha account name is used</string>

    <string name="title_activity_tag">Tag List</string>
    <string name="label_tag_name">Tag Name</string>
    <string name="label_new_category">New Category</string>
    <string name="title_tag_type_account">Account Tags</string>
    <string name="title_tag_type_trading">Trading Tags</string>
</resources>
