<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="8dp"
    android:background="@drawable/popup_win">

    <TextView
        android:id="@+id/lab_account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="8dp"
        android:text="@string/label_account_name"
        android:textStyle="bold"
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/txt_account_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/lab_account_name"
        android:singleLine="true"
        android:layout_marginStart="16dp" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@id/txt_account_name"
        android:text="@string/label_save"/>

    <Button
        android:id="@+id/btn_del"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@id/txt_account_name"
        android:layout_toEndOf="@id/btn_save"
        android:text="@string/label_delete"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below ="@id/txt_account_name"
        android:layout_alignParentEnd="true"
        android:text="@string/label_cancel"/>
</RelativeLayout>