<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".trading.TradingEditorActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/lab_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:textSize="48dp"
            android:textStyle="bold"
            android:text="@string/label_amount_zero" />
        <TextView
            android:id="@+id/lab_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/lab_amount"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/label_date_time" />
        <EditText
            android:id="@+id/txt_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lab_date"
            android:layout_toEndOf="@id/lab_date"
            android:inputType="date"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:text="@string/placeholder"/>
        <!--
        <TextView
            android:id="@+id/lab_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lab_date"
            android:layout_centerHorizontal="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/label_time" />
            -->
        <EditText
            android:id="@+id/txt_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@id/lab_date"
            android:layout_toEndOf="@id/txt_date"
            android:inputType="date"
            android:layout_marginLeft="10dp"
            android:textSize="16dp"
            android:text="@string/placeholder"/>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>